Import working, problem with bson marshal of enums
